@@ -1,3 +1,8 @@
+2003-02-28  Dominique Dumont  <domi@komarr.grenoble.hp.com>
+
+	* ObjScanner.pm (scan_object): 
+	- added autonomous scan popup widget
+
 2003-01-31  Dominique Dumont  <domi@komarr.grenoble.hp.com>
 
 	* ObjScanner.pm v2.1 : 
